[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_09/Pawn_09_Part_Arm.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Head_F.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Jet_Pack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Face.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Head_B.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Hip.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Body.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Pawns/Pawn_12/Pawn_12_Part_Legs.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Pawns/Pawn_12_Parts/Pawn_12_Pic.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Body/Sprite_Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -37.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite_Body/Sprite_Arm:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite_Legs/Sprite_Hip:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite_Body/Sprite_Head/Sprite_Face:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0, 1, 2 ]
}

[node name="Pawn_12_Pic" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite_Body" type="Sprite" parent="."]
position = Vector2( 0, -31 )
texture = ExtResource( 7 )
hframes = 2

[node name="Sprite_Head" type="Sprite" parent="Sprite_Body"]
position = Vector2( 1, -16 )
texture = ExtResource( 2 )
hframes = 5

[node name="Sprite_Head_B" type="Sprite" parent="Sprite_Body/Sprite_Head"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
show_behind_parent = true
texture = ExtResource( 5 )
hframes = 5

[node name="Sprite_Face" type="Sprite" parent="Sprite_Body/Sprite_Head"]
texture = ExtResource( 4 )
hframes = 5
frame = 2

[node name="Sprite_Jet_Pack" type="Sprite" parent="Sprite_Body"]
position = Vector2( -13, -6 )
texture = ExtResource( 3 )
hframes = 10

[node name="Sprite_Arm" type="Sprite" parent="Sprite_Body"]
position = Vector2( 0, -4 )
rotation = -0.649262
texture = ExtResource( 1 )
offset = Vector2( 12, 4 )
hframes = 3

[node name="Sprite_Legs" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 8 )
hframes = 27
frame = 8

[node name="Sprite_Hip" type="Sprite" parent="Sprite_Legs"]
position = Vector2( 0, -12 )
texture = ExtResource( 6 )
hframes = 8
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
